backend/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hackathon-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: hackathon.echopoint.tech
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5001
            path: /
    # This section is only required if TLS is to be enabled for the Ingress
    # tls:
    #   - hosts:
    #     - www.hackathon.echopoint.tech
    #     secretName: hackathon-ingress-tls
